--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@angular/cli": "^17.1.3",
-    "@angular/compiler-cli": "^17.1.0",
-    "typescript": "~5.3.2"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.3",
